ajustes de fila consumer e producer

--- a/PaymentServiceProvider.API/appsettings.Development.json
+++ b/PaymentServiceProvider.API/appsettings.Development.json
@@ -1,11 +1,12 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=localhost;Database=paymentServiceProvider;Username=postgres;Password=psp;CommandTimeout=120;"
+    "DefaultConnection": "Host=payment.crcmgu8oq64k.us-east-1.rds.amazonaws.com;Database=payment;Username=postgres;Password=awspostgres;CommandTimeout=120;"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
