--- a/PaymentServiceProvider.API/PaymentServiceProvider.API.csproj
+++ b/PaymentServiceProvider.API/PaymentServiceProvider.API.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
@@ -11,6 +11,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PaymentServiceProvider.Application\PaymentServiceProvider.Application.csproj" />
+    <ProjectReference Include="..\PaymentServiceProvider.Consumer\PaymentServiceProvider.Consumer.csproj" />
     <ProjectReference Include="..\PaymentServiceProvider.Infrastructure\PaymentServiceProvider.Infrastructure.csproj" />
   </ItemGroup>
 </Project>
