--- a/PaymentServiceProvider.Application/PaymentServiceProvider.Application.csproj
+++ b/PaymentServiceProvider.Application/PaymentServiceProvider.Application.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
@@ -6,5 +6,6 @@
   </PropertyGroup>
   <ItemGroup>
     <ProjectReference Include="..\PaymentServiceProvider.Domain\PaymentServiceProvider.Domain.csproj" />
+    <ProjectReference Include="..\PaymentServiceProvider.Producer\PaymentServiceProvider.Producer.csproj" />
   </ItemGroup>
 </Project>
