Configurando docker-compose e removendo arquivos desnecessários

--- a/PaymentServiceProvider.API/appsettings.Development.json
+++ b/PaymentServiceProvider.API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Host=payment.crcmgu8oq64k.us-east-1.rds.amazonaws.com;Database=payment;Username=postgres;Password=awspostgres;CommandTimeout=120;"
+    "DefaultConnection": "Host=db;Database=payment;Username=postgres;Password=postgres;CommandTimeout=120;"
   },
   "Logging": {
     "LogLevel": {
